--- a/session3/config_263774813773.json
+++ b/session3/config_263774813773.json
@@ -4,7 +4,7 @@
   "AUTO_RECORDING": "false",
   "AUTO_REACT": "false",
   "ANTI_LINK": "false",
-  "MODE": "public",
+  "MODE": "inbox",
   "PREFIX": ".",
   "AUTO_LIKE_EMOJI": [
     "❤️",
